--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "common:prepare": "husky install"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "@vscode/markdown-it-katex": "^1.0.3",
     "@vueuse/core": "^9.13.0",
     "highlight.js": "^11.7.0",
@@ -61,6 +62,7 @@
     "tailwindcss": "^3.2.7",
     "typescript": "~4.9.5",
     "vite": "^4.2.0",
+    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-pwa": "^0.14.4",
     "vue-tsc": "^1.2.0"
   },
