--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "common:prepare": "husky install"
   },
   "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@vicons/ionicons5": "^0.12.0",
     "@vscode/markdown-it-katex": "^1.0.3",
     "@vueuse/core": "^9.13.0",
