--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "chatbot",
     "vue"
   ],
+  "engines": {
+    "node": ">=18.18.2"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p  build-only",
