--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p  build-only",
+    "build": "npm run build-only",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
@@ -61,7 +61,6 @@
     "less": "^4.1.3",
     "lint-staged": "^13.1.2",
     "markdown-it-link-attributes": "^4.0.1",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "rimraf": "^4.3.0",
     "tailwindcss": "^3.2.7",
